<resources>
    <string name="app_name">墨道</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="test_string">在这个随波逐流的世界里。我一直想要做到不忘初心。我原本以为我还是原来的我。并没有变。直到今天我看了淘宝9.9包邮的衣服竟然已经下不去手。今天6.18。为什么还是9.9？？？？？</string>

    <string name="reply_to">%1$s 回复 %2$s</string>

    <string name="category_activity">动态</string>
    <string name="category_portrait">人像</string>
    <string name="category_humanities">人文</string>
    <string name="category_scenery">风光</string>
    <string name="category_documentary">纪实</string>
    <string name="category_still_life">静物</string>
    <string name="category_journey">旅行</string>

    <string name="transition_image">transitionImage</string>
    <string name="transition_title">transitionTitle</string>
    <string name="settings_log_out">退出登录</string>
    <string name="settings_clean_cache">清除缓存</string>
    <string name="title_settings">设置</string>
    <string name="str_drawer_following">%d\n关注</string>
    <string name="str_drawer_follower">%d\n关注者</string>
    <string name="item_image_count">%d张</string>
    <string name="reply_to_someone">回复%s:</string>
    <string name="post_like">喜欢</string>
    <string name="post_comment">评论</string>
    <string name="post_has_liked">已喜欢</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱、手机、用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_login">登录</string>
    <string name="account_forgot_pwd">忘记密码？</string>
    <string name="action_sign_up_short">注册</string>
    <string name="forgot_pwd_email_hint">请输入您的注册邮件地址</string>
    <string name="action_submit">提交</string>
    <string name="forgot_hint_email">如果您没有收到我们的邮件，请首先确认您注册的邮件地址就是您现在输入的邮件；\n\n如果准确无误的话，请检查您的垃圾邮件箱；\n\n如果还是无法正常获取您的密码连接后，请Email到webmaster@tuchong.com, 获取管理员的帮助。</string>
    <string name="forgot_email_cant_got_mail">邮件没有收到怎么办？</string>
    <string name="forgot_password">忘记密码</string>
    <string name="logout_failed">退出失败</string>
    <string name="item_feedback">建议反馈</string>
    <string name="enter_home_page">进入主页</string>
    <string name="homepage_follow">关注</string>
    <string name="homepage_cancel_follow">取消关注</string>
    <string name="author_info_follow_count">%d关注者</string>
    <string name="register_mode_phone">用手机注册</string>
    <string name="register_mode_email">用邮箱注册</string>
    <string name="sms_captcha_hint_text">你的手机%s会收到一条含有数字验证码的短信</string>
    <string name="register_user_protorl">点击注册代表您已经认真阅读并同意接受 用户协议</string>
    <string name="phone_register_resent_sms_code">重新发送验证码(%dS)</string>
    <string name="image_detail">more info</string>

</resources>
