<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/category_activity"/>
        <item
            android:id="@+id/nav_portrait"
            android:icon="@drawable/ic_event"
            android:title="@string/category_portrait"/>
        <item
            android:id="@+id/nav_humanities"
            android:icon="@drawable/ic_headset"
            android:title="@string/category_humanities"/>
        <item
            android:id="@+id/nav_scenery"
            android:icon="@drawable/ic_forum"
            android:title="@string/category_scenery"/>
        <item
            android:id="@+id/nav_documentary"
            android:icon="@drawable/ic_forum"
            android:title="@string/category_documentary"/>
        <item
            android:id="@+id/nav_still_life"
            android:icon="@drawable/ic_forum"
            android:title="@string/category_still_life"/>
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/ic_forum"
            android:title="@string/category_journey"/>
    </group>


</menu>
