<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="info.lofei.app.tuchong.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/layout_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/captcha_region"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/captcha_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="1"
                android:maxLines="1"
                android:singleLine="true"/>
            <ImageView
                android:id="@+id/captcha_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#fff"
                android:src="@drawable/ic_cast_dark"
                />
            <ImageView
                android:id="@+id/captcha_fetch"
                android:layout_weight="0.5"
                android:src ="@drawable/ic_media_play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>

