<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/Widget.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:id="@+id/iv_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/left_photo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:transitionName="@string/transition_image" />

            <ImageView
                android:id="@+id/middle_photo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:transitionName="@string/transition_image" />

            <ImageView
                android:id="@+id/right_photo_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:transitionName="@string/transition_image" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/do_some_to_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <Button
            android:id="@+id/like_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_like"/>
        <Button
            android:id="@+id/comment_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_comment"/>
    </LinearLayout>
</LinearLayout>