<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000">
    <RelativeLayout
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#678">

        <FrameLayout
            android:id="@+id/user_avatar_info_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#199"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@mipmap/ic_launcher"
                app:border_color="#FF000000"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/action_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage_follow"
                android:layout_gravity="bottom|right"
                android:background="#2234"
                android:padding="5dp"
                android:textColor="#fff"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_info_follow_count"
                android:gravity="center|right"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="64dp"
                android:padding="5dp"
                android:layout_gravity="right|bottom"

                />
        
        </FrameLayout>

        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="这个是一个很长的名称打发发打发打发"
            android:textSize="16sp"
            android:textColor="#fff"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:layout_below="@id/user_avatar_info_layout"/>

        <TextView android:id="@+id/action_enter_homepage"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/enter_home_page"
            android:layout_alignParentBottom="true"
            android:layout_margin="24dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#fff"
            android:background="#125678"
            />

        <TextView
            android:id="@+id/author_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_below="@id/author_name"
            android:layout_above="@id/action_enter_homepage"
            android:textSize="14sp"
            android:textColor="#aeaeae"
            android:isScrollContainer="true"
            android:text="独立人像摄影师 微博：http://weibo.com/Helloreynard"/>

    </RelativeLayout>

</RelativeLayout>